{
    "name": "DevConsoleInputs",
    "maps": [
        {
            "name": "DevConsole",
            "id": "8f62939e-8235-4c9b-add6-27d670bafc6b",
            "actions": [
                {
                    "name": "ToggleConsole",
                    "type": "Button",
                    "id": "aa3e5165-0817-48bf-8197-a02c73a4221a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavigateUp",
                    "type": "Button",
                    "id": "597864b9-34ca-4d5c-85ac-594684a1846b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NavigateDown",
                    "type": "Button",
                    "id": "942517e1-1427-4549-8255-4cd5c68da6de",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4f427582-1600-474a-9f14-c329be534746",
                    "path": "<Keyboard>/backquote",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleConsole",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a7cc833-1bad-4801-a5d2-e92163187a6a",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavigateUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d47586a3-02e8-43c7-bd3c-4955d28bc0fb",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NavigateDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}